--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
 <body>
   <script src="js/scripts.js"></script>
+<ul class="topnav" id="myTopnav">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+  <li class="icon">
+    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+  </li>
+</ul>
 <h1>hey<h1>
 </body>
 </html>
