--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
 
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+<style>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+</style>
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
