--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ ul.topnav li.icon {display: none;}
 
 <body>
 <ul class="topnav" id="myTopnav">
+  <a href="#">Bossy R</a>
   <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
