--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ ul.topnav li a:hover {background-color: #555;}
 ul.topnav li.icon {display: none;}
 </style>
 
-  <title>The HTML5 Herald</title>
+  <title>Bossy R</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
