--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ ul.topnav li.icon {display: none;}
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+<center><h1>Bossy R</h1></center>
   <script src="js/scripts.js"></script>
 </body>
 </html>
