--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ ul.topnav li.icon {display: none;}
 <body>
 <ul class="topnav" id="myTopnav">
  <li><a href="#">Bossy R</a></li>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#home">AR</a></li>
+  <li><a href="#news">ER</a></li>
+  <li><a href="#contact">IR</a></li>
+  <li><a href="#about">OR</a></li>
   <li class="icon">
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
