--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ ul.topnav li.icon {display: none;}
   </li>
 </ul>
 <center><h1>Bossy R</h1></center>
+<center><p>Coming soon (:</p></center>
   <script src="js/scripts.js"></script>
 </body>
 </html>
